# tmux-worktree-sessions

./: .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT.md  README.md  devenv.nix  pyproject.toml  tmux-sessions.tmux  tmux-worktree-sessions.tmux
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: demo.yml  tests.yml
demo/: publish.sh  readme.tape  setup.sh  tmux.conf
docs/: python-migration.md
scripts/: common.sh  fetch_reload.sh  sessions.sh  sort_by_score.py
scripts/tmux_sessions/: __main__.py  fetch_reload.py  git.py  picker.py  score.py  sessions.py  text.py  tmux.py
scripts/tmux_worktree_sessions/: __main__.py  config.py  curl.py  fetch_reload.py  fzf.py  git.py  icons.py  picker.py  score.py  sessions.py  text.py  tmux.py
tests/: common.bats  fetch_reload.bats  sessions.bats  smoke.bats  test_helper.bash  tmux-sessions.bats
tests/helpers/: git_fixtures.bash  stubs.bash
tests/python/: conftest.py  test_config.py  test_curl.py  test_fetch_reload.py  test_fzf.py  test_git.py  test_picker.py  test_score.py  test_score_cli.py  test_sessions.py  test_smoke.py  test_text.py  test_tmux.py  test_tmux_sessions_tmux.py  test_tmux_worktree_sessions_tmux.py
tests/python/_stubs/: fzf  tmux
